# ChangeLog for app-misc/nut
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/nut/ChangeLog,v 1.19 2011/05/21 16:53:49 jer Exp $

*nut-16.11 (21 May 2011)

  21 May 2011; Jeroen Roovers <jer@gentoo.org> +nut-16.11.ebuild:
  Version bump.

*nut-16.9 (05 Apr 2011)

  05 Apr 2011; Jeroen Roovers <jer@gentoo.org> nut-16.5.ebuild,
  +nut-16.9.ebuild:
  Version bump. Fix DEPEND.

  20 Mar 2011; Justin Lecher <jlec@gentoo.org> nut-16.5.ebuild:
  x11-libs/fltk SLOTMOVE 1.1 -> 1, corrected ebuild accordingly

  22 Jan 2011; Christian Faulhammer <fauli@gentoo.org> nut-14.1.ebuild:
  stable x86, bug 351547

  14 Jan 2011; Justin Lecher <jlec@gentoo.org> nut-16.5.ebuild,
  files/nut-16.5-build-fixes.patch, +files/nut-16.5-int.patch:
  X support included

*nut-16.5 (13 Jan 2011)

  13 Jan 2011; Justin Lecher <jlec@gentoo.org> nut-10.15.ebuild,
  -nut-12.2.ebuild, -nut-12.7.ebuild, nut-14.1.ebuild, +nut-16.5.ebuild,
  +files/nut-16.5-build-fixes.patch:
  Version Bump

  13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> nut-14.1.ebuild:
  ppc stable wrt #351547

  13 Jan 2011; Markos Chandras <hwoarang@gentoo.org> nut-14.1.ebuild:
  Stable on amd64 wrt bug #351547

*nut-14.1 (22 Nov 2008)

  22 Nov 2008; Santiago M. Mola <coldwind@gentoo.org>
  +files/nut-14.1-build-fixes.patch, +nut-14.1.ebuild:
  Version bump, use EAPI 2, honor LDFLAGS, fix --as-needed (bug #246904).

  11 May 2008; <solar@gentoo.org> nut-12.7.ebuild:
  - Keyworded ~arm/~amd64 and cross-compile love

*nut-12.7 (09 Sep 2007)

  09 Sep 2007; Santiago M. Mola <coldwind@gentoo.org> nut-10.15.ebuild,
  nut-12.2.ebuild, +nut-12.7.ebuild:
  Bump to 12.7, bug #187179
  Homepage updated.

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing agriffis from metadata due to his retirement (see #182294 for
  reference).

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*nut-12.2 (22 Jan 2007)
