@@ -4,22 +4,20 @@ Hash: SHA1
 AUX nut-14.1-build-fixes.patch 400 RMD160 dd3a66304053c04b1aab9b69aef73c7132e7f44c SHA1 e3c000c1a34104b8c0d263f35e8135fe6005fb7e SHA256 cd6a6b3dce8bb9caf7281a9c04b410e7373d8c95ac822c7696d577a624f10002
 AUX nut-16.5-build-fixes.patch 1512 RMD160 ecaed7a6f641b28f15366a4b1f5c5a7f36cb2ce5 SHA1 54603045464fe290d5020c5da3bc95d2c19f7449 SHA256 daddb486d989ed4fa656ea85e170212b4f25bbdcf05c8d1242b2f3376ce1aa5f
 AUX nut-16.5-int.patch 3051 RMD160 97acad44b7b6a6f6cb9e490e6006910402bac7f1 SHA1 15e5624533fc971e8862b65e4357d0bd5f0e02ff SHA256 5f71264fa46d225ba0e561c03eb715832c7d7c701c1d8fc42e5d99223d758464
-DIST nut-10.15.tar.bz2 814365 RMD160 ffdcda35a2c1f4305fd02d3edf04005cf5de9ac5 SHA1 ded0d47618d0a0da8bc9bb89c6bd7a36539cc64c SHA256 e33d0d57af8ce5ce6ca1df89ab2ed5ae49a09e0cb5abdf4df6d7956ca98527fe
 DIST nut-14.1.tar.gz 1160598 RMD160 9b3b27e1a36f4d181e3c16609fda5bb3c8f43376 SHA1 954fd52c37be5ebe8e7b98deb1c449aa0f99d916 SHA256 b69e0f440aadd7cccdad4dbaffc0ef3cf15597270b4fc21bb065cbb61f2e3387
 DIST nut-16.11.tar.gz 1264945 RMD160 73ad80666323c570800bda353d9f9b4be916690d SHA1 8d46e0be798a46cbb4668d310ca33c172d3279a1 SHA256 c33bc5dfcc67f70cdea4b6a0237beaed846afb6dc95299304d6ec549a9490eba
 DIST nut-16.5.tar.gz 1270063 RMD160 7f2bc03f14bcea20cdc7c64209e7ac20cfc94741 SHA1 d694d2d7b9a5de71f0f802ec704582cf243bf777 SHA256 525448b9aa26fd4682134b35556297820b75c77be21de56d68ad137adb364782
 DIST nut-16.9.tar.gz 1267995 RMD160 c0f0556f325f4e94ca386fbfd4142af888c489dc SHA1 6ccc77784519bda5cfbdcfcad70ba58652a31366 SHA256 901dd52a7e488af03837c9c7a17cd1eddbaa54f485a097a165c2ff01a9c22f97
-EBUILD nut-10.15.ebuild 680 RMD160 3b97cb03b9fb873aa3fe9aea018c5bdb986197eb SHA1 6b43fc9c615323adb4bf56963e929cd0f2fbeecc SHA256 c8c172a90afecf6aee4398b8d2ff98e3b8d39fc0ed2e284f8c0fc084c0193c8c
-EBUILD nut-14.1.ebuild 815 RMD160 ffd3e42b881e412dbfaa4da38ee5f09a7ee3f64b SHA1 5f07829bebf2b063d0c457dce3647638a26c9935 SHA256 da2f9f1fbaa8923616dfa794c554da8d5dfa5ed0d6d0b11d7d28c579d7397cce
-EBUILD nut-16.11.ebuild 975 RMD160 15c556b9a0be2d3e04b0eb0bd89d78a0991c032b SHA1 adb35ee023389ca43a5446c6fe35aafe4a967b02 SHA256 6ff926a67f80326efd4c7673a8c75d81619a82855d355da84080c1c1533885a4
-EBUILD nut-16.5.ebuild 1003 RMD160 80f2795cc11f3cfc2c22f3121a8a7d8792c4a768 SHA1 f411e3a4bd14fd0558d5591d2236d158859b1d44 SHA256 c22fc90e6c26ef62ebfa1083ee812ca6256912b5cb81977e90da9377f811c5e8
-EBUILD nut-16.9.ebuild 974 RMD160 21033d2bdd7d6fd035ec10b616d9888917614939 SHA1 3e59f06597da6718789614a0c0aee2c28bfd2166 SHA256 c67dfa5e686b547b4b5a56a23984d1b8741d9748668954771ee624a1342d087d
-MISC ChangeLog 2853 RMD160 d6bceb7ffb3ef1862ec646b13469c3c89ced3957 SHA1 9e8670d71e139b1c144e0517336ba11fa9ee5b72 SHA256 edce229f5676f959df50de6874d55f7416260479454e54b0ae477434f020315e
+EBUILD nut-14.1.ebuild 807 RMD160 7b6865a3820972a1a5b84b13cebebe1c9427f2d4 SHA1 dfff4cfabb31db46f727ac310838c84eb3542732 SHA256 f180b3dddf430aeeb6390c9a4f68d5957e2c7a66161b31664e4dc7338fc9f73c
+EBUILD nut-16.11.ebuild 968 RMD160 8686d303a1d05aff786ac369c5a0d3283e8d88a2 SHA1 89cc73e1f5e71cfe833c0129fa5ab141e1de01a8 SHA256 3da06acc363d091d2c1bfaeb4c0510b6f5647178757db1e5cf95c8aeef4ce859
+EBUILD nut-16.5.ebuild 996 RMD160 3d4a89d9e2341616a5dad4c5d12c3a7aab754324 SHA1 8b14e969645f01d1d66a0bde54e6cbbb4ffe04b7 SHA256 179cbfaa7021aa2cab423768193814352e26e4685ca18225394fe36aea8d2907
+EBUILD nut-16.9.ebuild 967 RMD160 d444e30d8d8ab1e28fe37791416a88d16fb29376 SHA1 ff96654f7864eb651cf464394c97d7bce98e3355 SHA256 4176be726474365ec9ee8c2e8c22be5fc670ffdaed1c8be6a752643dc682e3f2
+MISC ChangeLog 3012 RMD160 352ad6285f358945c1998691fa30d1e2a3119a5d SHA1 cfe51f800d394e70ae9327192f49b5d71bb3ba1a SHA256 2f1cf31600c1d04e60af861627fa9170456df11269521529bcdaef42386d7a31
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3X7lIACgkQVWmRsqeSphOISwCfc8hDZnG0F7+L5TJvWS4fvEsC
-ltcAnR4PznwePFj/pwQaHi3We0d0MaS+
-=Wmxx
+iEYEARECAAYFAk3X70AACgkQVWmRsqeSphOCUACffWSHG4AMNlZzy7fh+lQGewgL
+CmEAn17kXS8T9ZLXOiGB3HJLEfSYoaIJ
+=o28d
 -----END PGP SIGNATURE-----
