@@ -1,26 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/nut/nut-10.15.ebuild,v 1.5 2011/01/13 17:52:43 jlec Exp $
-
-inherit flag-o-matic
-
-DESCRIPTION="Record what you eat and analyze your nutrient levels"
-HOMEPAGE="http://nut.sourceforge.net/"
-SRC_URI="http://www.lafn.org/~av832/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~ppc x86"
-IUSE=""
-
-src_compile() {
-	append-flags '-DNUTDIR=\".nutdb\" -DFOODDIR=\"/usr/share/nut\"'
-	emake CFLAGS="${CFLAGS}" || die "emake failed"
-}
-
-src_install() {
-	insinto /usr/share/nut
-	doins raw.data/* || die
-	dobin nut || die
-	doman nut.1 || die
-}
